# WidgetZ

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md  build_docs.sh  example.c  index.html  internal_utils.c  main.c  theme.c  utils.c  widgetz.h  widgetz_internal.h
CMake/Modules/: FindAllegro.cmake  FindFreetype.cmake
example/: example.c
files/: internal_utils-c.html  theme-c.html  utils-c.html  widgetz-h.html
files/include/widgetz/: widgetz-h.html
files/src/: internal_utils-c.html  skin_theme-c.html  theme-c.html  utils-c.html
files/src/widgets/: box-c.html  button-c.html  editbox-c.html  filllayout-c.html  imagebutton-c.html  layoutstop-c.html  scroll-c.html  textbox-c.html  toggle-c.html  widget-c.html
files/widgets/: box-c.html  button-c.html  editbox-c.html  filllayout-c.html  imagebutton-c.html  layoutstop-c.html  scroll-c.html  textbox-c.html  toggle-c.html  widget-c.html
include/widgetz/: widgetz.h  widgetz_internal.h
index/: Classes.html  Constants.html  Files.html  Functions.html  General.html  General2.html  General3.html  Types.html  Variables.html
javascript/: searchdata.js
search/: ClassesW.html  ConstantsW.html  FilesL.html  FunctionsW.html  GeneralB.html  GeneralC.html  GeneralE.html  GeneralF.html  GeneralH.html  GeneralI.html  GeneralL.html  GeneralM.html  GeneralP.html  GeneralS.html  GeneralT.html  GeneralV.html  GeneralW.html  GeneralX.html  GeneralY.html  TypesA.html  TypesE.html  VariablesB.html  VariablesC.html  VariablesE.html  VariablesF.html  VariablesI.html  VariablesS.html  VariablesT.html  VariablesW.html  VariablesY.html
src/: internal_utils.c  nine_patch.c  skin_theme.c  theme.c  utils.c
src/widgets/: box.c  button.c  editbox.c  filllayout.c  imagebutton.c  layoutstop.c  scroll.c  textbox.c  toggle.c  widget.c
widgets/: box.c  button.c  editbox.c  filllayout.c  imagebutton.c  layoutstop.c  scroll.c  textbox.c  toggle.c  widget.c
